--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,23 +1,38 @@
 <header>
-    <div class="container">
-        <div class="logo">
-            <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-        </div>
-        
-        <!-- Main Navigation -->
-        <nav>
-            <ul>
-                {{ range .Site.Menus.main }}
-                    <li>
-                        <a href="{{ .URL }}" {{ if $.IsMenuCurrent "main" . }}class="active"{{ end }}>
-                            {{ .Name }}
-                        </a>
-                    </li>
-                {{ end }}
-            </ul>
-        </nav>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
 
-        <!-- Language Switcher -->
-        {{ partial "language-switcher.html" . }}
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          {{ range .Site.Menus.main }}
+          <li class="nav-item">
+            <a
+              aria-current="page"
+              href="{{ .URL }}"
+              class="nav-link{{ if $.IsMenuCurrent "main" . }}active{{ end }}"
+            >
+              {{ .Name }}
+            </a>
+          </li>
+          {{ end }}
+        </ul>
+      </div>
     </div>
+
+    <!-- Language Switcher -->
+    {{ partial "language-switcher.html" . }}
+  </nav>
 </header>
