feat: custom brand colors added.

--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -7,3 +7,17 @@ $font-weight-base: normal;
 
 $headings-font-family: $font-family-sans-serif;
 $headings-font-weight: bold;
+
+// Brand Colors
+$jet-black: #0D0D0D;
+$champagne-gold: #D4AF37;
+$platinum-silver: #E5E4E2;
+
+$primary: $champagne-gold;
+$secondary: $platinum-silver;
+$dark: $jet-black;
+$light: $platinum-silver;
+
+$body-bg: $jet-black;
+$body-color: $platinum-silver;
+$headings-color: $primary;
