--- a/assets/scss/_splash.scss
+++ b/assets/scss/_splash.scss
@@ -51,3 +51,24 @@
     }
   }
 }
+
+.location-banner {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  @include breakpoint("lg") {
+    max-width: 900px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
