--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -58,17 +58,30 @@
       </button>
 
       <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNav">
-        <ul class="navbar-nav align-items-center">
+        <ul class="navbar-nav align-items-start align-items-lg-center">
           {{ range .Site.Menus.main }}
-          <li class="nav-item">
-            <a
-              aria-current="page"
-              href="{{ .URL }}"
-              class="nav-link{{ if $.IsMenuCurrent "main" . }}active{{ end }}"
-            >
-              {{ .Name }}
-            </a>
-          </li>
+            {{ if .HasChildren }}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle{{ if $.IsMenuCurrent "main" . }} active{{ end }}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  {{ .Name }}
+                </a>
+                <ul class="dropdown-menu">
+                  {{ range .Children }}
+                    <li><a class="dropdown-item{{ if $.IsMenuCurrent "main" . }} active{{ end }}" href="{{ .URL }}">{{ .Name }}</a></li>
+                  {{ end }}
+                </ul>
+              </li>
+            {{ else }}
+              <li class="nav-item">
+                <a
+                  aria-current="page"
+                  href="{{ .URL }}"
+                  class="nav-link{{ if $.IsMenuCurrent "main" . }} active{{ end }}"
+                >
+                  {{ .Name }}
+                </a>
+              </li>
+            {{ end }}
           {{ end }}
         </ul>
       </div>
