--- a/assets/scss/_splash.scss
+++ b/assets/scss/_splash.scss
@@ -27,7 +27,7 @@
   }
 
   &__caption {
-    background-color: #643a00;
+    background-color: $champagne-gold;
     padding: 16px;
 
     @include breakpoint("md") {
@@ -36,12 +36,13 @@
       left: 50%;
       transform: translate(-50%, -50%);
       width: 100%;
-      max-width: 800px;
+      max-width: 650px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: rgba(100, 58, 0, 0.5);
+      border-radius: 6px;
+      background: rgba($champagne-gold, 0.7);
       text-align: center;
     }
 
@@ -55,7 +56,7 @@
 .location-banner {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 350px;
   overflow: hidden;
 
   img {
@@ -67,6 +68,7 @@
 
   @include breakpoint("lg") {
     max-width: 900px;
+    height: 500px;
     margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
