--- a/layouts/locations/single.html
+++ b/layouts/locations/single.html
@@ -19,7 +19,7 @@
 </div>
 {{ end }}
 
-<div class="container py-5">
+<div class="container py-4 py-lg-5">
   <div class="row">
     <div class="col-lg-8 mx-auto">
       <article class="location-page">
