--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,6 +33,25 @@
   }
 }
 
+.contact-fixed {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  background-color: $jet-black;
+
+  a {
+    padding: 6px;
+
+    svg {
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
+
 .snowflake {
   color: #fff;
   font-size: 1em;
