feat: /about page added.
- About page added with all language variations.
- Header logo link text updated to english only.
- Kopaonik page email address updated.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
   <div class="container-fluid d-flex justify-content-end py-1 align-items-center">
     <!-- Language Switcher -->
     {{ partial "language-switcher.html" . }}
-    
+
     <div class="dropdown ms-3">
       <button class="btn btn-link py-0 px-2 dropdown-toggle d-flex align-items-center"
               id="bd-theme"
@@ -43,7 +43,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">{{ .Site.Title }}</a>
+      <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">Golden Line Transfers</a>
 
       <button
         class="navbar-toggler"
