feat: Umami tracking installed.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -36,6 +36,13 @@
     <meta name="robots" content="noindex, nofollow" />
     {{ end }}
 
+    <!-- Umami Tracking -->
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="3d2fdfb4-08e2-485c-a0e7-ca581c8fbcfa"
+    ></script>
+
     <!-- Google tag (gtag.js) -->
     <script
       async
