feat: animated "Mouse + Arrow" scroll indicator added.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,5 +22,14 @@
       <a href="tel:+381665040583" class="cta-button btn btn-outline-light">{{ i18n "callUs" }}</a>
     </div>
   </div>
+
+  <div class="splash__scroll-down">
+    <div class="mouse"></div>
+    <div class="arrow">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+  </div>
 </section>
 {{ end }}
