--- a/assets/scss/_splash.scss
+++ b/assets/scss/_splash.scss
@@ -51,6 +51,94 @@
       color: #fff !important;
     }
   }
+
+  &__scroll-down {
+    display: none;
+
+    @include breakpoint("lg") {
+      display: block;
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      opacity: 0.7;
+      transition: opacity 0.3s ease;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+
+    .mouse {
+      width: 26px;
+      height: 42px;
+      border: 2px solid $white;
+      border-radius: 20px;
+      margin-bottom: 6px;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 6px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 3px;
+        height: 6px;
+        background-color: $white;
+        border-radius: 2px;
+        animation: scrollMouse 2s infinite;
+      }
+    }
+
+    .arrow {
+      span {
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-bottom: 2px solid $white;
+        border-right: 2px solid $white;
+        transform: rotate(45deg);
+        margin: -3px auto;
+        animation: scrollArrow 2s infinite;
+
+        &:nth-child(2) {
+          animation-delay: 0.2s;
+        }
+
+        &:nth-child(3) {
+          animation-delay: 0.4s;
+        }
+      }
+    }
+  }
+}
+
+@keyframes scrollMouse {
+  0% {
+    top: 6px;
+    opacity: 1;
+  }
+  100% {
+    top: 20px;
+    opacity: 0;
+  }
+}
+
+@keyframes scrollArrow {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .location-banner {
