--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -66,19 +66,24 @@
   }
 }
 
-.contact-viber {
+.contact-telegram {
   animation: swing-in-right-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275)
     0.5s both;
 }
 
-.contact-whats-app {
+.contact-viber {
   animation: swing-in-right-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s
     both;
 }
 
-.contact-phone {
+.contact-whats-app {
   animation: swing-in-right-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275)
     1.5s both;
+}
+
+.contact-phone {
+  animation: swing-in-right-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 2s
+    both;
 }
 
 @keyframes swing-in-right-fwd {
@@ -87,6 +92,7 @@
     transform-origin: right;
     opacity: 0;
   }
+
   100% {
     transform: rotateY(0);
     transform-origin: right;
