feat: search system added.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import "custom-design";
 @import "airport-shuttles";
 @import "blog";
+@import "search";
 
 // Typography overrides for Navigation and Language Switcher
 .navbar-nav .nav-link,
